discussion/kv_engine/177000/177000_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move metering tests to metering bucket

Disable one of the metering test as it needs documents to
be created earlier. The unit tests will be added back later
on.

Change-Id: Ib86b88f023cf6e87cd9c9cbe7e38b55e2ec5fcc0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 09:20:21.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18533/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:33:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:60:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:62:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->createBucket("TestDefaultThrottleLimit",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:75:5: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    cluster->deleteBucket("TestDefaultThrottleLimit");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:80:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:97:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:119:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:129:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:178:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:214:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:286:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:324:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:581:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:1122:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:1173:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:1234:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:1354:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18533/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.cc:33:18:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18533/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19639/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4372 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-07-03T08:58:15.022Z] (197 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8205/ : FAILURE

Compile error at [2022-07-03T08:11:40.134Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8205/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17684/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47293/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39745/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28798/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20766/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21406/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
